SET(SRC 
  Backspace.cc
  char.constants.cc
  char.functions.cc
  Cstring.cc
  Dimension.cc
  DimensionExpression.cc
  DimensionExpressionRef.cc
  DynamicIndexRange.cc
  environment.cc
  fmt.cc
  Format.cc
  Fstring.cc
  gio.cc
  GlobalStreams.cc
  Index.cc
  IndexRange.cc
  IndexSlice.cc
  Inquire.cc
  numeric.cc
  Observer.cc
  ObserverGraph.cc
  ObserverMediator.cc
  ObserverMulti.cc
  Omit.cc
  random.cc
  Rewind.cc
  Star.cc
  string.constants.cc
  string.functions.cc
  Time_Date.cc
  array.iterator.hh
  ArrayTraits.hh
  Backspace.hh
  BArray.fwd.hh
  BArray.hh
  bit.hh
  byte.fwd.hh
  byte.hh
  CArray.fwd.hh
  CArray.hh
  CArray.io.hh
  CArrayP.fwd.hh
  CArrayP.hh
  CArrayP.io.hh
  char.constants.hh
  char.functions.hh
  Chunk.hh
  ChunkExponent.hh
  ChunkVector.fwd.hh
  ChunkVector.hh
  ChunkVector.io.hh
  Cstring.fwd.hh
  Cstring.hh
  Dimension.fwd.hh
  Dimension.hh
  DimensionExpression.hh
  DimensionExpressionCon.hh
  DimensionExpressionCube.hh
  DimensionExpressionDiv.hh
  DimensionExpressionMax.hh
  DimensionExpressionMin.hh
  DimensionExpressionMul.hh
  DimensionExpressionPow.hh
  DimensionExpressionRef.hh
  DimensionExpressions.hh
  DimensionExpressionSquare.hh
  DimensionExpressionSub.hh
  DimensionExpressionSum.hh
  DimensionSlice.fwd.hh
  DimensionSlice.hh
  DynamicIndexRange.fwd.hh
  DynamicIndexRange.hh
  environment.hh
  FArray.all.fwd.hh
  FArray.all.hh
  FArray.all.io.hh
  FArray.functions.hh
  FArray.fwd.hh
  FArray.hh
  FArray.io.hh
  FArray1.all.fwd.hh
  FArray1.all.hh
  FArray1.fwd.hh
  FArray1.hh
  FArray1.io.hh
  FArray1.Project.MArray.hh
  FArray1A.fwd.hh
  FArray1A.hh
  FArray1D.fwd.hh
  FArray1D.hh
  FArray1P.fwd.hh
  FArray1P.hh
  FArray1S.fwd.hh
  FArray1S.hh
  FArray1S.io.hh
  FArray1S.Project.MArray.hh
  FArray2.all.fwd.hh
  FArray2.all.hh
  FArray2.fwd.hh
  FArray2.hh
  FArray2.io.hh
  FArray2.Project.MArray.hh
  FArray2A.fwd.hh
  FArray2A.hh
  FArray2D.fwd.hh
  FArray2D.hh
  FArray2P.fwd.hh
  FArray2P.hh
  FArray2S.fwd.hh
  FArray2S.hh
  FArray2S.io.hh
  FArray2S.Project.MArray.hh
  FArray3.all.fwd.hh
  FArray3.all.hh
  FArray3.fwd.hh
  FArray3.hh
  FArray3.io.hh
  FArray3A.fwd.hh
  FArray3A.hh
  FArray3D.fwd.hh
  FArray3D.hh
  FArray3P.fwd.hh
  FArray3P.hh
  FArray3S.fwd.hh
  FArray3S.hh
  FArray3S.io.hh
  FArray4.all.fwd.hh
  FArray4.all.hh
  FArray4.fwd.hh
  FArray4.hh
  FArray4.io.hh
  FArray4A.fwd.hh
  FArray4A.hh
  FArray4D.fwd.hh
  FArray4D.hh
  FArray4P.fwd.hh
  FArray4P.hh
  FArray4S.fwd.hh
  FArray4S.hh
  FArray4S.io.hh
  FArray5.all.fwd.hh
  FArray5.all.hh
  FArray5.fwd.hh
  FArray5.hh
  FArray5.io.hh
  FArray5A.fwd.hh
  FArray5A.hh
  FArray5D.fwd.hh
  FArray5D.hh
  FArray5P.fwd.hh
  FArray5P.hh
  FArray5S.fwd.hh
  FArray5S.hh
  FArray5S.io.hh
  FArray6.all.fwd.hh
  FArray6.all.hh
  FArray6.fwd.hh
  FArray6.hh
  FArray6.io.hh
  FArray6A.fwd.hh
  FArray6A.hh
  FArray6D.fwd.hh
  FArray6D.hh
  FArray6P.fwd.hh
  FArray6P.hh
  FArray6S.fwd.hh
  FArray6S.hh
  FArray6S.io.hh
  FArrayInitializer.fwd.hh
  FArrayInitializer.hh
  FArrayRS.fwd.hh
  FArrayRS.hh
  FArrayS.all.fwd.hh
  FArrayS.all.hh
  FArrayS.all.io.hh
  FArrayS.functions.hh
  FArrayS.fwd.hh
  FArrayS.hh
  FArrayS.io.hh
  FArrayTail.fwd.hh
  FArrayTail.hh
  floops.hh
  Fmath.hh
  fmt.hh
  fmt.manipulators.hh
  Format.hh
  FormattedIO.hh
  Fstring.fwd.hh
  Fstring.hh
  gio.hh
  GlobalStreams.hh
  Index.fwd.hh
  Index.hh
  IndexRange.fwd.hh
  IndexRange.hh
  IndexSlice.fwd.hh
  IndexSlice.hh
  InitializerSentinel.hh
  Inquire.hh
  IOFlags.fwd.hh
  IOFlags.hh
  MArray.all.fwd.hh
  MArray.all.hh
  MArray.all.io.hh
  MArray.functions.hh
  MArray.fwd.hh
  MArray.hh
  MArray.io.hh
  MArray1.fwd.hh
  MArray1.hh
  MArray1.io.hh
  MArray1.Project.MArray.hh
  MArray2.fwd.hh
  MArray2.hh
  MArray2.io.hh
  MArray3.fwd.hh
  MArray3.hh
  MArray3.io.hh
  MArray4.fwd.hh
  MArray4.hh
  MArray4.io.hh
  MArray5.fwd.hh
  MArray5.hh
  MArray5.io.hh
  MArray6.fwd.hh
  MArray6.hh
  MArray6.io.hh
  MArrayR.fwd.hh
  MArrayR.hh
  numeric.hh
  ObjexxFCL.fwd.hh
  ObjexxFCL.hh
  ObjexxFCL.Project.hh
  Observer.fwd.hh
  Observer.hh
  ObserverGraph.hh
  ObserverMediator.hh
  ObserverMulti.hh
  ObserverSingle.hh
  Omit.fwd.hh
  Omit.hh
  Optional.fwd.hh
  Optional.hh
  Print.hh
  ProxySentinel.hh
  proxy_const_assert.hh
  random.hh
  Read.fwd.hh
  Read.hh
  Reference.fwd.hh
  Reference.hh
  Required.fwd.hh
  Required.hh
  Rewind.hh
  rvalue_cast.hh
  sbyte.fwd.hh
  sbyte.hh
  SetWrapper.fwd.hh
  SetWrapper.hh
  Star.fwd.hh
  Star.hh
  StaticIndexRange.fwd.hh
  StaticIndexRange.hh
  Sticky.fwd.hh
  Sticky.hh
  Stream.cc
  Stream.fwd.hh
  Stream.hh
  string.constants.hh
  string.functions.hh
  Time_Date.hh
  TraitsA.hh
  TraitsB.hh
  TraitsE.hh
  TraitsF.hh
  TraitsG.hh
  TraitsI.hh
  TraitsLD.hh
  TypeTraits.hh
  ubyte.fwd.hh
  ubyte.hh
  Write.fwd.hh
  Write.hh
) 

ADD_LIBRARY( objexx ${SRC} )

