set( target_name objexx )

set(src 
  src/Backspace.cc
  src/char.constants.cc
  src/char.functions.cc
  src/Cstring.cc
  src/Dimension.cc
  src/DimensionExpression.cc
  src/DimensionExpressionRef.cc
  src/DynamicIndexRange.cc
  src/environment.cc
  src/fmt.cc
  src/Format.cc
  src/Fstring.cc
  src/gio.cc
  src/GlobalStreams.cc
  src/Index.cc
  src/IndexRange.cc
  src/IndexSlice.cc
  src/Inquire.cc
  src/numeric.cc
  src/Observer.cc
  src/ObserverGraph.cc
  src/ObserverMediator.cc
  src/ObserverMulti.cc
  src/Omit.cc
  src/random.cc
  src/Rewind.cc
  src/Star.cc
  src/string.constants.cc
  src/string.functions.cc
  src/Time_Date.cc
  src/array.iterator.hh
  src/ArrayTraits.hh
  src/Backspace.hh
  src/BArray.fwd.hh
  src/BArray.hh
  src/bit.hh
  src/byte.fwd.hh
  src/byte.hh
  src/CArray.fwd.hh
  src/CArray.hh
  src/CArray.io.hh
  src/CArrayP.fwd.hh
  src/CArrayP.hh
  src/CArrayP.io.hh
  src/char.constants.hh
  src/char.functions.hh
  src/Chunk.hh
  src/ChunkExponent.hh
  src/ChunkVector.fwd.hh
  src/ChunkVector.hh
  src/ChunkVector.io.hh
  src/Cstring.fwd.hh
  src/Cstring.hh
  src/Dimension.fwd.hh
  src/Dimension.hh
  src/DimensionExpression.hh
  src/DimensionExpressionCon.hh
  src/DimensionExpressionCube.hh
  src/DimensionExpressionDiv.hh
  src/DimensionExpressionMax.hh
  src/DimensionExpressionMin.hh
  src/DimensionExpressionMul.hh
  src/DimensionExpressionPow.hh
  src/DimensionExpressionRef.hh
  src/DimensionExpressions.hh
  src/DimensionExpressionSquare.hh
  src/DimensionExpressionSub.hh
  src/DimensionExpressionSum.hh
  src/DimensionSlice.fwd.hh
  src/DimensionSlice.hh
  src/DynamicIndexRange.fwd.hh
  src/DynamicIndexRange.hh
  src/environment.hh
  src/FArray.all.fwd.hh
  src/FArray.all.hh
  src/FArray.all.io.hh
  src/FArray.functions.hh
  src/FArray.fwd.hh
  src/FArray.hh
  src/FArray.io.hh
  src/FArray1.all.fwd.hh
  src/FArray1.all.hh
  src/FArray1.fwd.hh
  src/FArray1.hh
  src/FArray1.io.hh
  src/FArray1.Project.MArray.hh
  src/FArray1A.fwd.hh
  src/FArray1A.hh
  src/FArray1D.fwd.hh
  src/FArray1D.hh
  src/FArray1P.fwd.hh
  src/FArray1P.hh
  src/FArray1S.fwd.hh
  src/FArray1S.hh
  src/FArray1S.io.hh
  src/FArray1S.Project.MArray.hh
  src/FArray2.all.fwd.hh
  src/FArray2.all.hh
  src/FArray2.fwd.hh
  src/FArray2.hh
  src/FArray2.io.hh
  src/FArray2.Project.MArray.hh
  src/FArray2A.fwd.hh
  src/FArray2A.hh
  src/FArray2D.fwd.hh
  src/FArray2D.hh
  src/FArray2P.fwd.hh
  src/FArray2P.hh
  src/FArray2S.fwd.hh
  src/FArray2S.hh
  src/FArray2S.io.hh
  src/FArray2S.Project.MArray.hh
  src/FArray3.all.fwd.hh
  src/FArray3.all.hh
  src/FArray3.fwd.hh
  src/FArray3.hh
  src/FArray3.io.hh
  src/FArray3A.fwd.hh
  src/FArray3A.hh
  src/FArray3D.fwd.hh
  src/FArray3D.hh
  src/FArray3P.fwd.hh
  src/FArray3P.hh
  src/FArray3S.fwd.hh
  src/FArray3S.hh
  src/FArray3S.io.hh
  src/FArray4.all.fwd.hh
  src/FArray4.all.hh
  src/FArray4.fwd.hh
  src/FArray4.hh
  src/FArray4.io.hh
  src/FArray4A.fwd.hh
  src/FArray4A.hh
  src/FArray4D.fwd.hh
  src/FArray4D.hh
  src/FArray4P.fwd.hh
  src/FArray4P.hh
  src/FArray4S.fwd.hh
  src/FArray4S.hh
  src/FArray4S.io.hh
  src/FArray5.all.fwd.hh
  src/FArray5.all.hh
  src/FArray5.fwd.hh
  src/FArray5.hh
  src/FArray5.io.hh
  src/FArray5A.fwd.hh
  src/FArray5A.hh
  src/FArray5D.fwd.hh
  src/FArray5D.hh
  src/FArray5P.fwd.hh
  src/FArray5P.hh
  src/FArray5S.fwd.hh
  src/FArray5S.hh
  src/FArray5S.io.hh
  src/FArray6.all.fwd.hh
  src/FArray6.all.hh
  src/FArray6.fwd.hh
  src/FArray6.hh
  src/FArray6.io.hh
  src/FArray6A.fwd.hh
  src/FArray6A.hh
  src/FArray6D.fwd.hh
  src/FArray6D.hh
  src/FArray6P.fwd.hh
  src/FArray6P.hh
  src/FArray6S.fwd.hh
  src/FArray6S.hh
  src/FArray6S.io.hh
  src/FArrayInitializer.fwd.hh
  src/FArrayInitializer.hh
  src/FArrayRS.fwd.hh
  src/FArrayRS.hh
  src/FArrayS.all.fwd.hh
  src/FArrayS.all.hh
  src/FArrayS.all.io.hh
  src/FArrayS.functions.hh
  src/FArrayS.fwd.hh
  src/FArrayS.hh
  src/FArrayS.io.hh
  src/FArrayTail.fwd.hh
  src/FArrayTail.hh
  src/floops.hh
  src/Fmath.hh
  src/fmt.hh
  src/fmt.manipulators.hh
  src/Format.hh
  src/FormattedIO.hh
  src/Fstring.fwd.hh
  src/Fstring.hh
  src/gio.hh
  src/GlobalStreams.hh
  src/Index.fwd.hh
  src/Index.hh
  src/IndexRange.fwd.hh
  src/IndexRange.hh
  src/IndexSlice.fwd.hh
  src/IndexSlice.hh
  src/InitializerSentinel.hh
  src/Inquire.hh
  src/IOFlags.fwd.hh
  src/IOFlags.hh
  src/MArray.all.fwd.hh
  src/MArray.all.hh
  src/MArray.all.io.hh
  src/MArray.functions.hh
  src/MArray.fwd.hh
  src/MArray.hh
  src/MArray.io.hh
  src/MArray1.fwd.hh
  src/MArray1.hh
  src/MArray1.io.hh
  src/MArray1.Project.MArray.hh
  src/MArray2.fwd.hh
  src/MArray2.hh
  src/MArray2.io.hh
  src/MArray3.fwd.hh
  src/MArray3.hh
  src/MArray3.io.hh
  src/MArray4.fwd.hh
  src/MArray4.hh
  src/MArray4.io.hh
  src/MArray5.fwd.hh
  src/MArray5.hh
  src/MArray5.io.hh
  src/MArray6.fwd.hh
  src/MArray6.hh
  src/MArray6.io.hh
  src/MArrayR.fwd.hh
  src/MArrayR.hh
  src/numeric.hh
  src/ObjexxFCL.fwd.hh
  src/ObjexxFCL.hh
  src/ObjexxFCL.Project.hh
  src/Observer.fwd.hh
  src/Observer.hh
  src/ObserverGraph.hh
  src/ObserverMediator.hh
  src/ObserverMulti.hh
  src/ObserverSingle.hh
  src/Omit.fwd.hh
  src/Omit.hh
  src/Optional.fwd.hh
  src/Optional.hh
  src/Print.hh
  src/ProxySentinel.hh
  src/proxy_const_assert.hh
  src/random.hh
  src/Read.fwd.hh
  src/Read.hh
  src/Reference.fwd.hh
  src/Reference.hh
  src/Required.fwd.hh
  src/Required.hh
  src/Rewind.hh
  src/rvalue_cast.hh
  src/sbyte.fwd.hh
  src/sbyte.hh
  src/SetWrapper.fwd.hh
  src/SetWrapper.hh
  src/Star.fwd.hh
  src/Star.hh
  src/StaticIndexRange.fwd.hh
  src/StaticIndexRange.hh
  src/Sticky.fwd.hh
  src/Sticky.hh
  src/Stream.cc
  src/Stream.fwd.hh
  src/Stream.hh
  src/string.constants.hh
  src/string.functions.hh
  src/Time_Date.hh
  src/TraitsA.hh
  src/TraitsB.hh
  src/TraitsE.hh
  src/TraitsF.hh
  src/TraitsG.hh
  src/TraitsI.hh
  src/TraitsLD.hh
  src/TypeTraits.hh
  src/ubyte.fwd.hh
  src/ubyte.hh
  src/Write.fwd.hh
  src/Write.hh
) 

set( test_src
  test/CArray.unit.cc
  test/CArrayP.unit.cc
  test/Chunk.unit.cc
  test/ChunkVector.unit.cc
  test/Cstring.unit.cc
  test/Dimension.unit.cc
  test/DimensionSlice.unit.cc
  test/DynamicIndexRange.unit.cc
  test/FArray.unit.cc
  test/FArray1.unit.cc
  test/FArray2.unit.cc
  test/FArrayS.unit.cc
  test/Fmath.unit.cc
  test/Fstring.unit.cc
  test/GlobalStreams.unit.cc
  test/Index.unit.cc
  test/IndexSlice.unit.cc
  test/MArray.unit.cc
  test/Optional.unit.cc
  test/Print.unit.cc
  test/Read.unit.cc
  test/Reference.Optional.unit.cc
  test/Reference.unit.cc
  test/Required.unit.cc
  test/StaticIndexRange.unit.cc
  test/Stream.unit.cc
  test/TypeTraits.unit.cc
  test/Write.unit.cc
  test/bit.unit.cc
  test/byte.unit.cc
  test/char.functions.unit.cc
  test/floops.unit.cc
  test/fmt.unit.cc
  test/gio.unit.cc
  test/main.cc
  test/numeric.unit.cc
  test/string.functions.unit.cc
  test/ubyte.unit.cc
)

add_library( ${target_name} ${src} )

CREATE_TEST_TARGETS( ${target_name} "${test_src}" "" )

